# Otogram

./: .aiignore  .cursorrules  .dockerignore  .editorconfig  .env  .env.example  .env.sample  .gitignore  .gptignore  .pre-commit-config.yaml  AUTHENTICATION_GUIDE.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CODEOWNERS  CODE_QUALITY_UPGRADE_REPORT.md  CONTRIBUTING.md  DEPENDABOT_UPDATES.md  DETAILED_MIGRATION_VERIFICATION.md  Dockerfile  FINAL_CONSISTENCY_AUDIT.md  INTERFACE_UPGRADE_REPORT.md  LEVEL2_SYNC_AUDIT.md  LICENSE  MIGRATION_TEST_REPORT.md  MODERN_BOT_INTERFACE.md  Makefile  PERSONAL_PROJECT_OPTIMIZATION.md  README.md  RELEASE_NOTES.md  SECURITY_ANALYSIS_REPORT.md  SLOWMODE_BEHAVIOR.md  STRUCTURE_ANALYSIS.md  SYNC_ANALYSIS_REPORT.md  SYSTEM_ANALYSIS_REPORT.md  USAGE_GUIDE.md  auth_feature_test.py  backend_test.py  backend_test_final.py  comprehensive_auth_test.py  comprehensive_migration_test.py  (+21 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  RECOMMENDATIONS.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: auto-merge.yml  check-links.yml  ci.yml  cleanup.yml  codeql.yml  dependency-review.yml  labeler.yml  maintenance.yml  release.yml  security.yml  stale.yml
archive/: GETTING_STARTED.md  MIGRATION_SUMMARY.md  README.md  SYNC_ANALYSIS_REPORT.md  migration_test.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  PROJECT_STRUCTURE.md  PYROGRAM_TO_PYROFORK_MIGRATION.md  README.md  README_FULL.md  SECURITY.md  SETUP_GUIDE.md  index.md
docs/decisions/: 0001-clean-architecture.md  0002-dependency-management.md  0003-documentation-strategy.md  0004-repository-structure.md  README.md
docs/getting-started/: overview.md
scripts/: __init__.py  fix_linting.py  health_check.py  setup.py  update_deps.py
src/: README.md
src/core/: config.py  constants.py  database.py  security.py
src/models/: base.py  blacklist.py  config.py  group.py  log.py  message.py
src/services/: blacklist_service.py  config_service.py  group_service.py  message_service.py
src/telegram/: bot_manager.py  management_bot.py  userbot.py
src/telegram/handlers/: auth_handlers.py  blacklist_handlers.py  config_handlers.py  group_handlers.py  message_handlers.py
tests/: __init__.py  conftest.py  test_base_models.py  test_blacklist_models.py  test_blacklist_service.py  test_bot_manager.py  test_config.py  test_config_models.py  test_config_service.py  test_config_service_extended.py  test_core.py  test_core_database_comprehensive.py  test_core_security.py  test_database.py  test_group_models.py  test_group_service.py  test_group_service_extended.py  test_health_check.py  test_management_bot.py  test_message_models.py  test_message_service.py  test_models.py  test_services.py  test_telegram_handlers.py  test_userbot.py
tests_extensive_backup/: conftest.py  test_base_models.py  test_config_models.py  test_config_service.py  test_constants.py  test_core_security.py  test_database.py  test_database_extended.py  test_group_service.py  test_log_models.py  test_message_service_extended.py  test_models.py  test_models_comprehensive.py  test_security.py
tests_simplified/: conftest.py  test_core.py  test_models.py  test_services.py
